# Audiolysis

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/assets/: logo.xcf  resources.qrc
src/assets/icons/: play_pause_stop.xcf
src/core/: Configuration.cpp  Configuration.hpp  audiolysis.hpp  scripting.cpp  scripting.hpp
src/test/: test.cpp  test.hpp  testing.hpp
src/test/scripting/: testScripting.cpp  testScripting.hpp
src/ui/: DialogAbout.cpp  DialogAbout.hpp  MainWindow.cpp  MainWindow.hpp  terminal.cpp  terminal.hpp
src/ui/panels/: Panel.cpp  Panel.hpp  PanelControl.cpp  PanelControl.hpp  PanelPlayback.cpp  PanelPlayback.hpp  PanelResources.cpp  PanelResources.hpp
